Fix: Select text overflow

--- a/src/magicdust/custom-styles.scss
+++ b/src/magicdust/custom-styles.scss
@@ -105,6 +105,9 @@ $valueList: 2 2px, 4 4px, 8 8px, 16 16px, 20 20px, 32 32px;
 
   .disabled {
     cursor: not-allowed;
+    & * {
+      cursor: not-allowed;
+    }
   }
 
   .center-container {
